report: cage citation

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -97,6 +97,13 @@ ATmega328P},
   howpublished = {\url{http://www.mikrocontroller.net/articles/AVR_In_System_Programmer}},
   note = {Accessed: 2014-09-08}
 }
+@misc{fiewiki,
+  title = {Fierlinger Wiki},
+  key = {zxc},
+  howpublished = {\url{https://fierlinger.wiki.tum.de/}},
+  note = {Accessed: 2014-06-03}
+}
+
 @article{ramsey,
   title = {A Molecular Beam Resonance Method with Separated Oscillating Fields},
   author = {Ramsey, Norman F.},
