--- a/report/main.tex
+++ b/report/main.tex
@@ -47,7 +47,7 @@ to Ramsey \cite{ramsey} is performed, which allows it, to get information about 
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.87\linewidth]{img/frm3d.jpg}
-\caption{Experiment environment. 1: Field cage for magnetic field compensation, 2: Outer magnetic shield, 3: Inner magnetic shield, 4: Air conditioning system.}
+\caption{Experiment environment. 1: Field cage for magnetic field compensation, 2: Outer magnetic shield, 3: Inner magnetic shield, 4: Air conditioning system. Source: \cite{fiewiki}}
 \label{fig:exp}
 \end{figure}
 \subsection{Temperature measurement}
