--- a/report/main.tex
+++ b/report/main.tex
@@ -1112,6 +1112,13 @@ might happen, when the microcontroller is connected to a USBasp programmer,
 which is not connected to a computer.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Developing / Extending}
+\subsection{Project git repository}
+Our whole project can be found in github of the nEDM experiment under the name ``Temperature-Sensor-System''. Figure \ref{lst:git} show the folder structure  in the repository.
+\lstset{style=mathstyle}
+\begin{lstlisting}[xleftmargin=25pt, xrightmargin=25pt,framexleftmargin=10pt,framextopmargin=10pt, framexbottommargin=10pt, caption={Folder structure in the project git repository}, label={lst:git}]
+Temperature-Sensor-System
+\end{lstlisting}
+\subsection{Tips}
 The following are tips for developers, which might be useful, when extending
 the sensor network:
 \begin{itemize}
